--- a/particles/style.css
+++ b/particles/style.css
@@ -33,7 +33,7 @@
     top: 48px;
     left: 0;
     width: 80px;
-    color: #13E8E9;
+    color: #f6801f;
     font-size: .8em;
     text-align: left;
     text-indent: 4px;
@@ -69,7 +69,7 @@
 #particles-js {
     width: 100%;
     height: 550px;
-    background-color: #070707;
+    background-color: #000000;
     background-image: url('');
     background-size: cover;
     background-position: 50% 50%;
