--- a/text/textstyle.css
+++ b/text/textstyle.css
@@ -31,7 +31,7 @@
   }
   .container1 {
     height: 380px;
-    width: 320px;
+    width: 50vw;
     padding: 15px;
     margin: 20px;
     justify-content: center;
