--- a/css/style.css
+++ b/css/style.css
@@ -2052,7 +2052,7 @@ footer p {
   .respmapa {
     margin-top: 90px !important;
     height: 480px !important;
-    width: 600px !important;
+    width: 65vw !important;
   }
 }
 
@@ -2060,7 +2060,7 @@ footer p {
   .respmapa {
     margin-top: 90px !important;
     height: 480px !important;
-    width: 600px !important;
+    width: 65vw !important;
   }
 }
 
@@ -2071,7 +2071,7 @@ footer p {
 
   .respmapa {
     height: 250px !important;
-    width: 380px !important;
+    width: 65vw !important;
   }
   .container1 {
     width: 20px;
