--- a/css/style.css
+++ b/css/style.css
@@ -244,17 +244,17 @@ textarea {
 #team-section .team-member-wrapper .single-team-member .member-name h6,
 #team-section .team-member-wrapper .single-team-member .member-name p,
 #team-section .team-member-wrapper .single-team-member .member-name ul,
-#our-client .owl-theme .owl-dots .owl-dot span,
-#our-client2 .owl-theme .owl-dots .owl-dot span {
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -ms-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
+#portfolio .owl-theme .owl-dots .owl-dot span,
+#portfolio2 .owl-theme .owl-dots .owl-dot span {
+  -webkit-transition: all 0.3s ease-in-out !important;
+  -moz-transition: all 0.3s ease-in-out !important;
+  -ms-transition: all 0.3s ease-in-out !important;
+  -o-transition: all 0.3s ease-in-out !important;
+  transition: all 0.3s ease-in-out !important;
 }
 
 .theme-main-menu .navbar-nav > li a:hover {
-  color: #ffffff;
+  color: #ffffff !important;
 }
 
 .tran4s,
@@ -308,24 +308,29 @@ textarea {
   width: 75%;
   margin: 60px auto 0 auto;
 }
-
+.navbar-nav {
+  display:block !important;
+}
+.navbar-collapse{ 
+  margin-top: -2.5vh !important;
+ }
 .p-color,
 .theme-main-menu .navbar-nav > li.active > a,
 .theme-main-menu .navbar-nav > li > a:hover {
-  color: #fff;
+  color: #fff !important;
 }
 
-#about-us .single-about-content:hover h5 a,
-#our-client .single-about-content:hover h5 a,
-#our-client2 .single-about-content:hover h5 a,
+#servicos .single-about-content:hover h5 a,
+#portfolio .single-about-content:hover h5 a,
+#portfolio2 .single-about-content:hover h5 a,
 #service-section .single-service-content:hover .icon-heading .icon,
 #service-section .single-service-content:hover .icon-heading h6 a,
 #pricing-section .single-price-table a:hover,
 #blog-section .single-news-item .img a,
 #blog-section .single-news-item:hover .post p a,
 #blog-section .single-news-item .post h6:hover a,
-#contact-section .contact-address-content .left-side ul li:hover .icon,
-#contact-section .send-message form button:hover,
+#contato .contact-address-content .left-side ul li:hover .icon,
+#contato .send-message form button:hover,
 .inner-page-banner .opacity ul li:last-child,
 .blog-details-page aside .sidebar-news-list ul li a i,
 .monthly-header-title,
@@ -342,42 +347,42 @@ textarea {
 .blog-details-post-wrapper .post-share-area .share li a:hover,
 .theme-main-menu.navbar .nav > li ul li a:hover,
 .blog-details-post-wrapper .post-share-area .share li a.active {
-  color: #000000;
+  color: #000000 !important;
 }
 
 .p-color-bg,
 .theme-title h2:before,
-#about-us .single-about-content:hover .icon,
-#our-client .single-about-content:hover .icon,
-#our-client2 .single-about-content:hover .icon,
+#servicos .single-about-content:hover .icon,
+#portfolio .single-about-content:hover .icon,
+#portfolio2 .single-about-content:hover .icon,
 #skill-section .codeconSkillbar .skillBar,
-#our-client .owl-theme .owl-dots .owl-dot.active span,
-#our-client .owl-theme .owl-dots .owl-dot:hover span,
-#our-client2 .owl-theme .owl-dots .owl-dot.active span,
-#our-client2 .owl-theme .owl-dots .owl-dot:hover span,
+#portfolio .owl-theme .owl-dots .owl-dot.active span,
+#portfolio .owl-theme .owl-dots .owl-dot:hover span,
+#portfolio2 .owl-theme .owl-dots .owl-dot.active span,
+#portfolio2 .owl-theme .owl-dots .owl-dot:hover span,
 .blog-details-post-wrapper .comment-area .single-comment .comment button:hover {
   background: #242424;
 }
 
 .banner .project-button,
-#about-us .icon,
-#about-us .single-about-content a.more,
-#our-client .icon,
-#our-client .single-about-content a.more,
-#our-client2 .icon,
-#our-client2 .single-about-content a.more,
+#servicos .icon,
+#servicos .single-about-content a.more,
+#portfolio .icon,
+#portfolio .single-about-content a.more,
+#portfolio2 .icon,
+#portfolio2 .single-about-content a.more,
 #service-section .single-service-content:hover,
 #project-section .project-menu ul li.active,
 #project-section .project-menu ul li:hover,
 .page-middle-banner .opacity a,
 #team-section .team-member-wrapper .single-team-member .img .opacity h4,
 #pricing-section .single-price-table a,
-#our-client .owl-theme .owl-dots .owl-dot.active span,
-#our-client .owl-theme .owl-dots .owl-dot:hover span,
-#our-client2 .owl-theme .owl-dots .owl-dot.active span,
-#our-client2 .owl-theme .owl-dots .owl-dot:hover span,
-#contact-section .contact-address-content .left-side ul li .icon,
-#contact-section .send-message form button,
+#portfolio .owl-theme .owl-dots .owl-dot.active span,
+#portfolio .owl-theme .owl-dots .owl-dot:hover span,
+#portfolio2 .owl-theme .owl-dots .owl-dot.active span,
+#portfolio2 .owl-theme .owl-dots .owl-dot:hover span,
+#contato .contact-address-content .left-side ul li .icon,
+#contato .send-message form button,
 .sidebar-tags ul li a:hover,
 .blog-details-post-wrapper .post-comment form button,
 .blog-details-post-wrapper .post-comment textarea:focus,
@@ -395,30 +400,30 @@ textarea {
  ***/
 
 .theme-main-header {
-  position: absolute;
-  top: 0;
-  background: rgba(0, 0, 0, 0.89);
-  left: 0;
-  right: 0;
-  z-index: 999;
-  padding-top: 20px;
+  position: absolute !important;
+  top: 0 !important;
+  background: rgba(0, 0, 0, 0.89) !important;
+  left: 0 !important;
+  right: 0 !important;
+  z-index: 999 !important;
+  padding-top: 20px !important;
 }
 
 .theme-main-menu .navbar-nav > li > a {
-  text-transform: uppercase;
-  color: #9d9f9f;
-  font-weight: 700;
-  background: transparent;
-  padding: 9px 15px;
+  text-transform: uppercase !important;
+  color: #9d9f9f !important;
+  font-weight: 700 !important;
+  background: transparent !important;
+  padding: 9px 15px !important;
 }
 
 .theme-main-menu .navbar-nav > li:last-child > a {
-  padding-right: 0;
+  padding-right: 0 !important;
 }
 
 .theme-main-menu.navbar {
-  border: none;
-  margin: 0;
+  border: none !important;
+  margin: 0 !important;
 }
 
 .theme-main-menu.navbar .nav > li ul.sub-menu {
@@ -442,55 +447,55 @@ textarea {
 }
 
 .theme-main-menu.navbar .nav > li ul li a {
-  line-height: 40px;
-  color: #c7c7c7;
-  font-weight: 700;
-  padding: 0 0 0 15px;
-  display: block;
+  line-height: 40px !important;
+  color: #c7c7c7 !important;
+  font-weight: 700 !important;
+  padding: 0 0 0 15px !important;
+  display: block !important;
 }
 
 .theme-main-menu.navbar .nav > li ul li a:hover {
-  color: #fff;
+  color: #fff !important;
 }
 
 .theme-main-menu.navbar .nav > li ul li:last-child a {
-  border: none;
+  border: none !important;
 }
 
 .theme-main-menu.navbar .nav > li:hover ul.sub-menu {
-  top: 100%;
-  opacity: 1;
-  visibility: visible;
+  top: 100% !important;
+  opacity: 1 !important;
+  visibility: visible !important;
 }
 
 .theme-main-menu .navbar-toggle {
-  margin: 0;
-  border-radius: 0;
-  color: #fff;
-  padding-right: 15px;
+  margin: 0 !important;
+  border-radius: 0 !important;
+  color: #fff !important;
+  padding-right: 15px !important;
 }
 
 .theme-main-menu .navbar-toggle .fa {
-  font-size: 18px;
-  vertical-align: middle;
-  margin-left: 5px;
+  font-size: 18px !important;
+  vertical-align: middle !important;
+  margin-left: 5px !important;
 }
 
 .theme-main-menu .navbar-nav {
-  margin: 0;
+  margin: 0 !important;
 }
 
 .theme-main-header li.dropdown-holder .fa {
-  position: absolute;
-  top: 0;
-  right: 0;
-  text-align: center;
-  width: 45px;
-  color: #fff;
-  font-size: 18px;
-  display: none;
-  cursor: pointer;
-  line-height: 44px;
+  position: absolute !important;
+  top: 0 !important;
+  right: 0 !important;
+  text-align: center !important;
+  width: 45px !important;
+  color: #fff !important;
+  font-size: 18px !important;
+  display: none !important;
+  cursor: pointer !important;
+  line-height: 44px !important;
 }
 
 /***
@@ -571,21 +576,21 @@ textarea {
 ====================================================================
 
  ***/
-#our-client .single-about-content,
-#our-client2 .single-about-content,
-#about-us .single-about-content {
+#portfolio .single-about-content,
+#portfolio2 .single-about-content,
+#servicos .single-about-content {
   text-align: center;
   margin-top: 55px;
   margin-bottom: 100px;
 }
-#our-client .col-lg-3,
-#our-client2 .col-lg-3,
-#about-us .col-lg-3 {
+#portfolio .col-lg-3,
+#portfolio2 .col-lg-3,
+#servicos .col-lg-3 {
   margin-left: 76px;
 }
-#our-client .icon,
-#our-client2 .icon,
-#about-us .icon {
+#portfolio .icon,
+#portfolio2 .icon,
+#servicos .icon {
   width: 130px;
   height: 130px;
   margin: 0 auto;
@@ -594,27 +599,27 @@ textarea {
   font-size: 36px;
   color: #292929;
 }
-#our-client h5 a,
-#our-client h5 a,
-#about-us h5 a {
+#portfolio h5 a,
+#portfolio h5 a,
+#servicos h5 a {
   color: #292929;
   margin: 35px 0 20px 0;
 }
-#our-client .single-about-content a.more,
-#our-client2 .single-about-content a.more,
-#about-us .single-about-content a.more {
+#portfolio .single-about-content a.more,
+#portfolio2 .single-about-content a.more,
+#servicos .single-about-content a.more {
   width: 130px;
   line-height: 45px;
   color: #292929;
   border-width: 1px;
   margin-top: 22px;
 }
-#our-client .single-about-content a.more:hover,
-#our-client .single-about-content:hover .icon,
-#our-client2 .single-about-content a.more:hover,
-#our-client2 .single-about-content:hover .icon,
-#about-us .single-about-content a.more:hover,
-#about-us .single-about-content:hover .icon {
+#portfolio .single-about-content a.more:hover,
+#portfolio .single-about-content:hover .icon,
+#portfolio2 .single-about-content a.more:hover,
+#portfolio2 .single-about-content:hover .icon,
+#servicos .single-about-content a.more:hover,
+#servicos .single-about-content:hover .icon {
   color: #fff;
 }
 
@@ -837,10 +842,10 @@ textarea {
 }
 
 #sobre,
-#about-us,
-#contact-section,
-#our-client,
-#our-client2,
+#servicos,
+#contato,
+#portfolio,
+#portfolio2,
 #project-section {
   display: none;
 }
@@ -1263,16 +1268,16 @@ textarea {
 
  ***/
 
-#our-client .client-slider {
+#portfolio .client-slider {
   text-align: center;
   margin: 58px 0 50px 0;
 }
 
-#our-client .client-slider img {
+#portfolio .client-slider img {
   margin: 0 auto;
 }
 
-#our-client .client-slider p {
+#portfolio .client-slider p {
   font-size: 18px;
   line-height: 28px;
   color: #343434;
@@ -1280,28 +1285,28 @@ textarea {
   margin: 33px 20px 24px 20px;
 }
 
-#our-client .client-slider h6 {
+#portfolio .client-slider h6 {
   text-transform: capitalize;
   margin-bottom: 45px;
 }
 
-#our-client .owl-theme .owl-dots .owl-dot span {
+#portfolio .owl-theme .owl-dots .owl-dot span {
   width: 13px;
   height: 13px;
   background: #fff;
   border: 1px solid#9d9f9f;
   margin: 0 5px;
 }
-#our-client2 .client-slider {
+#portfolio2 .client-slider {
   text-align: center;
   margin: 58px 0 50px 0;
 }
 
-#our-client2 .client-slider img {
+#portfolio2 .client-slider img {
   margin: 0 20px;
 }
 
-#our-client2 .client-slider p {
+#portfolio2 .client-slider p {
   font-size: 18px;
   line-height: 28px;
   color: #343434;
@@ -1309,12 +1314,12 @@ textarea {
   margin: 33px 20px 24px auto;
 }
 
-#our-client2 .client-slider h6 {
+#portfolio2 .client-slider h6 {
   text-transform: capitalize;
   margin-bottom: 45px;
 }
 
-#our-client2 .owl-theme .owl-dots .owl-dot span {
+#portfolio2 .owl-theme .owl-dots .owl-dot span {
   width: 13px;
   height: 13px;
   background: #fff;
@@ -1500,26 +1505,37 @@ textarea {
 
  ***/
 
-#contact-section .contact-address-content h2 {
+.right-side {
+  margin-top: 10vh;
+  margin-left: 25vw;
+}
+
+.right-side input {
+  width: 100%;
+}
+#contato .contact-address-content {
+  display: flex;
+}
+
+#contato .contact-address-content h2 {
   margin: 95px 0 35px 0;
 }
 
-#contact-section .contact-address-content .left-side ul {
+#contato .contact-address-content .left-side ul {
   margin-top: 70px;
 }
 
-#contact-section .contact-address-content .left-side ul li {
+#contato .contact-address-content .left-side ul li {
   position: relative;
   padding-left: 85px;
   margin-bottom: 50px;
 }
-
-#contact-section .contact-address-content .left-side ul li h6 {
+#contato .contact-address-content .left-side ul li h6 {
   font-size: 14px;
   margin-bottom: 8px;
 }
 
-#contact-section .contact-address-content .left-side ul li .icon {
+#contato .contact-address-content .left-side .icon {
   width: 60px;
   height: 60px;
   border-width: 1px;
@@ -1532,37 +1548,37 @@ textarea {
   font-size: 30px;
 }
 
-#contact-section .contact-address-content .left-side ul li:hover .icon {
+#contato .contact-address-content .left-side ul li:hover .icon {
   background: #fff;
 }
 
-#contact-section .contact-address-content #map {
+#contato .contact-address-content #map {
   width: 100%;
   height: 500px;
 }
 
-#contact-section .send-message {
+#contato .send-message {
   padding: 0 15px;
 }
 
-#contact-section .send-message h2 {
+#contato .send-message h2 {
   margin: 50px 0 40px 0;
 }
 
-#contact-section .send-message .single-input {
+#contato .send-message .single-input {
   margin-bottom: 20px;
   height: 50px;
 }
 
-#contact-section .send-message .single-input input,
-#contact-section .send-message form textarea {
+#contato .send-message .single-input input,
+#contato .send-message form textarea {
   width: 100%;
   height: 100%;
   border: 1px solid #dfdfdf;
   padding: 0 15px;
 }
 
-#contact-section .send-message form textarea {
+#contato .send-message form textarea {
   height: 260px;
   max-width: 100%;
   max-height: 260px;
@@ -1570,12 +1586,12 @@ textarea {
   padding: 20px 15px;
 }
 
-#contact-section .send-message .single-input input:focus,
-#contact-section .send-message form textarea:focus {
+#contato .send-message .single-input input:focus,
+#contato .send-message form textarea:focus {
   border-color: #424040;
 }
 
-#contact-section .send-message form button {
+#contato .send-message form button {
   width: 140px;
   line-height: 40px;
   text-align: center;
@@ -1584,7 +1600,7 @@ textarea {
   border-width: 1px;
 }
 
-#contact-section .send-message form button:hover {
+#contato .send-message form button:hover {
   background: #fff;
 }
 
