--- a/css/style.css
+++ b/css/style.css
@@ -1705,8 +1705,11 @@ textarea {
  ***/
 
 footer {
-  background: black;
-  text-align: center;
+    width: 100%;
+    background: black;
+    text-align: center;
+    position: absolute;
+    bottom: 0 !important;
 }
 
 footer .logo {
