--- a/particles/style.css
+++ b/particles/style.css
@@ -64,7 +64,7 @@
 
 #particles-js {
   width: 100%;
-  height: 100vh;
+ height: 100vh !important;
   background-color: #000000;
   background-image: url("");
   background-size: cover;
