--- a/css/style.css
+++ b/css/style.css
@@ -1708,7 +1708,7 @@ footer {
     width: 100%;
     background: black;
     text-align: center;
-    position: absolute;
+    position: fixed;
     bottom: 0 !important;
 }
 
